Test Block now is an TileEntity that can do stuff

--- a/Coldcraft/config/splash.properties
+++ b/Coldcraft/config/splash.properties
@@ -1,5 +1,5 @@
 #Splash screen properties
-#Fri Mar 11 13:05:41 CST 2016
+#Tue Apr 05 07:43:24 CDT 2016
 logoTexture=textures/gui/title/mojang.png
 background=0xFFFFFF
 font=0x0
